# DigitalCosmic

./: .gitignore  CMakeLists.txt  CosmicDeck.cpp  CosmicDeck.hpp  CosmicServer.cpp  CosmicServer.hpp  DestinyDeck.cpp  DestinyDeck.hpp  DigitalCosmic.cpp  DigitalCosmic.hpp  EncounterRole.hpp  GameEvent.cpp  GameEvent.hpp  GameState.cpp  GameState.hpp  Makefile  PlanetInfo.hpp  PlayerColors.cpp  PlayerColors.hpp  PlayerInfo.cpp  PlayerInfo.hpp  PlayerRole.cpp  PlayerRole.hpp  README.md  TextualCosmic.cpp  TextualCosmic.hpp  TurnPhase.cpp  TurnPhase.hpp
Aliens/: AlienBase.cpp  AlienBase.hpp  Aliens.hpp  CMakeLists.txt  Human.cpp  Human.hpp  Machine.cpp  Machine.hpp  Oracle.cpp  Oracle.hpp  Remora.cpp  Remora.hpp  Shadow.cpp  Shadow.hpp  Sorcerer.cpp  Sorcerer.hpp  Spiff.cpp  Spiff.hpp  TickTock.cpp  TickTock.hpp  Trader.cpp  Trader.hpp  Virus.cpp  Virus.hpp  Warpish.cpp  Warpish.hpp
client/: CMakeLists.txt  Makefile  TextualCosmicClient.cpp
client/python/: DigitalCosmicClient.py  TextualCosmicClient.py  recipe.py
